<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="vm" type="org.socratic.android.contract.SplashPermissionsContract.ViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/permission_denied_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/onboarding_bg">

            <ImageView
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/permissions_denied"/>

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:text="@string/permission_denied_header"
                style="@style/BoldFont"/>

            <TextView
                android:id="@+id/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_marginTop="27dp"
                android:gravity="center"
                android:textSize="22sp"
                android:text="@string/camera_permission_denied"
                android:textColor="@color/web_card_font_color"/>

            <org.socratic.android.views.ForegroundLinearLayout
                style="@style/ThemeStrongButton"
                android:id="@+id/btn_settings"
                android:layout_width="244dp"
                android:layout_height="55dp"
                android:layout_marginTop="45dp">

                <TextView
                    android:id="@+id/settings_btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/go_to_settings"
                    style="@style/BoldFont" />
            </org.socratic.android.views.ForegroundLinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/permission_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/onboarding_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:text="@string/socratic_permission"
                style="@style/BoldFont"/>

            <ImageView
                android:id="@+id/camera_image"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/permissions_camera"/>

            <TextView
                android:id="@+id/camera_access_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/camera_access_copy"
                android:textColor="@color/web_card_font_color"/>

            <org.socratic.android.views.ForegroundLinearLayout
                style="@style/ThemeStrongButton"
                android:id="@+id/btn_camera"
                android:layout_width="244dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/camera_check"
                    android:layout_width="18dp"
                    android:layout_height="12dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/checkmark"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/camera_btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/enable_camera"
                    style="@style/BoldFont" />
            </org.socratic.android.views.ForegroundLinearLayout>

            <ImageView
                android:id="@+id/contacts_image"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-50dp"
                android:src="@drawable/permissions_contacts"/>

            <TextView
                android:id="@+id/contacts_access_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/contacts_access_copy"
                android:textColor="@color/web_card_font_color"/>

            <org.socratic.android.views.ForegroundLinearLayout
                style="@style/ThemeStrongButton"
                android:id="@+id/btn_contacts"
                android:layout_width="244dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/contacts_check"
                    android:layout_width="18dp"
                    android:layout_height="12dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/checkmark"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/contacts_btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/enable_contacts"
                    style="@style/BoldFont" />
            </org.socratic.android.views.ForegroundLinearLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>