<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/vg_rating_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/purpleRatingBackground"
        android:paddingTop="@dimen/padding_medium"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <View
            android:id="@+id/colored_bar"
            android:layout_width="45dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@color/grey_btn_color_off" />

        <LinearLayout
            android:id="@+id/vg_rating_stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_rating_star"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/how_do_you_like_socratic"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingbar_review"
                style="@style/SocraticRatingBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="-2dp"
                android:isIndicator="false"
                android:rating="0"
                android:stepSize="1"
                app:mrb_progressBackgroundTint="@color/purpleStarLight"
                app:mrb_progressTint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vg_rating_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_rating_review_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/rate_us_please"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_rating_no_thanks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_large"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_weight="1"
                    android:background="@drawable/transparent_btn_selector"
                    android:text="@string/no_thanks"
                    android:textColor="@drawable/text_select_color_invert" />

                <Button
                    android:id="@+id/btn_rating_sure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_large"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_weight="1"
                    android:background="@drawable/transparent_btn_selector"
                    android:text="@string/sure"
                    android:textColor="@drawable/text_select_color_invert" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vg_provide_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/rating_feedback_what_could_we_do"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <org.socratic.android.views.KeyboardEditText
                    android:id="@+id/et_rating_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_rounded"
                    android:gravity="top"
                    android:hint="@string/write_feedback"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="3"
                    android:padding="@dimen/padding_5dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>