<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="vm" type="org.socratic.android.contract.DefaultPermissionContract.ViewModel" />
    </data>

    <RelativeLayout

        android:id="@+id/activity_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:screenOrientation="portrait"
        android:background="@color/background"
        tools:context="org.socratic.android.activities.DefaultPermissionActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="19dp"
                android:layout_centerInParent="true"
                android:src="@drawable/camera_input_camera"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="22sp"
                android:text="@string/we_need_camera_access" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="17sp"
                android:text="@string/socratic_needs_camera_access"/>

            <org.socratic.android.views.ForegroundLinearLayout
                style="@style/ThemeStrongButton"
                android:id="@+id/btn_enable"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="46dp"
                android:paddingRight="46dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/enable"
                    style="@style/BoldFont" />
            </org.socratic.android.views.ForegroundLinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>
